Need to fix 1200px width issue

--- a/Sunday/Responsive Design/ex5/style.css
+++ b/Sunday/Responsive Design/ex5/style.css
@@ -109,6 +109,7 @@
     .details
     {
         border-radius: 0px 0px 15px 15px;
+        justify-content: flex-start;
     }
 }
 @media (max-width:600px)
