--- a/Sunday/Responsive Design/ex5-TomerEx/ex5.css
+++ b/Sunday/Responsive Design/ex5-TomerEx/ex5.css
@@ -1,150 +1,46 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    background: linear-gradient(90deg, rgba(103, 122, 227, 1) 0%, rgba(110, 102, 199, 1) 50%, rgba(117, 78, 166, 1) 100%);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (min-width: 901px) {
-    .container {
-        border-radius: 15px;
-        width: 95%;
-        margin: 10px auto;        
-    }
-
-    .img-card {
-        width: 40%;
-        border-radius: 15px 0px 0px 15px;
-    }
-
-    .description-card {
-        width: 60%;
-        border-radius: 0px 15px 15px 0px;
-    }
-
-    .transaction-row {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        text-align: center;
-    }
-    .transaction-row > button {
-        border-radius: 10px;
-    }
+nav {
+  background-color: #262626;
 }
 
-/* Medium */
-@media (max-width: 900px) {
-    .container {
-        flex-direction: column;
-        width: 75%;
-        margin: 10px auto;
-        height: 98%;
-    }
-
-    .img-card {
-        flex: 1;
-        border-radius: 15px 15px 0px 0px;
-    }
-
-    .description-card {
-        flex: 1;
-        border-radius: 0px 0px 15px 15px;
-        display: flex;
-        flex-direction: column;        
-        justify-content: space-between;
-    }
-
-    .transaction-row {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        text-align: center;        
-    }
-    .transaction-row > button {
-        border-radius: 10px;
-    }
+nav > ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
 }
 
-/* Mobile */
-@media (max-width: 600px) {
-    .container {     
-        margin: 10px auto;   
-        width: 98%;        
-        height: 98%;
-    }   
-    .img-card {
-        border-radius: 15px 15px 0px 0px;
-    }     
-    .transaction-row {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-    }
-    .transaction-row > button {
-        border-radius: 10px;
-    }
-    .description-card {
-        align-items: center;
-    }
+nav > ul > li > a {
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  display: inline-block;
 }
 
-/* General */
-
-.container {
-    display: flex; 
-    /* border: 1px solid white; */
-    border-radius: 15px;   
+nav > ul > li > a:hover {
+  background-color: black;
 }
 
-/* Image Sect */
-
-.img-card {
-    background: linear-gradient(90deg, rgba(103, 122, 227, 1) 0%, rgba(110, 102, 199, 1) 50%, rgba(117, 78, 166, 1) 100%);
-    display: flex;
-    justify-content: center;
-    align-items: center;    
+nav > ul > li.active > a {
+  background-color: #169B5D;
 }
 
-.circle {
-    background-color: rgba(255, 255, 255, 0.5);
-    padding: 25px;
-    border-radius: 50px;
-    font-size: x-large;
+/* nav > ul > li:nth-child(3) {
+  flex: 1;
+} */
+
+nav > ul > li:last-child {
+  margin-left: auto;
 }
 
-/* Description Sect */
-.description-card {
-    background-color: white;
-    padding: 15px;
-}
-
-.description-card > h1 {
-    color: #343a40;
-}
-
-.description-card > p {
-    color: gray;
-}
-
-.description-card span {
-    color: #e74b3c;
-    font-size: xx-large;
-    font-weight: bold;
-}
-
-.description-card button {
-    background: linear-gradient(90deg, rgba(103, 122, 227, 1) 0%, rgba(110, 102, 199, 1) 50%, rgba(117, 78, 166, 1) 100%);
-    border: 0;
-    padding: 10px;    
-    color: white;
-    font-weight: bold;
-    font-size: large;
-}
+/* nav > ul > li:last-child {
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+} */
