--- a/PortfolioProject/style.css
+++ b/PortfolioProject/style.css
@@ -1,3 +1,8 @@
+
+*
+{
+    box-sizing: border-box;
+}
 body
 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
@@ -26,7 +31,7 @@ p
 }
 #main-nav
 {
-    max-width: 1200px;
+    width:80%;
 }
 nav > ul
 {
@@ -59,7 +64,7 @@ nav ul > li:first-child {
   height:600px;
   background: linear-gradient(to right, #f5f5f5 0%, #dddddd 100%);
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
 }
 .opening > .col1 > button
 {
@@ -70,6 +75,14 @@ nav ul > li:first-child {
     background-color: rgb(36 99 235);
     border-radius: 0.5rem;
 }
+.opening > .col1 > button:hover
+{
+  background-position: right center;
+  transform: scale(1.05);
+  box-shadow: 0 8px 20px rgba(36, 99, 235, 0.3);
+  background-color: #000;
+}
+
 .opening > .col1
 {
     display: flex;
@@ -78,7 +91,6 @@ nav ul > li:first-child {
     align-items:center;
     gap:1.5rem;
     flex: 1 1 100%;
-    min-width: 0%;
 }
 .opening > .col2
 {
@@ -88,9 +100,10 @@ nav ul > li:first-child {
     align-items: center; 
     flex-wrap: wrap;
 }
+
 .profile-frame {
   width: 80%;          
-  max-width: 200px;     
+  max-width: 300px;     
   aspect-ratio: 1 / 1; 
   border-radius: 50%;   
   overflow: hidden;     
@@ -113,7 +126,7 @@ nav ul > li:first-child {
 }
  div > .about
  {
-    max-width: 1200px;
+    width:80%;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
@@ -168,6 +181,7 @@ nav ul > li:first-child {
   border-radius: 0.5rem 0 0 0.5rem;
   transition: width 0.4s ease;
 }
+
 .projects-container
 {
     background-color: rgb(235,235,235);
@@ -194,7 +208,9 @@ nav ul > li:first-child {
     flex-direction: column;
     justify-content: center;
     align-items: center; 
+    height: 400px;
 }
+
 .project > .project1-photo
 {
     background-image: url("GoldenFrameProjectPhoto.jpeg");
@@ -263,8 +279,6 @@ nav ul > li:first-child {
 
 .form-container {
     flex: 1 1 100%;
-    /* width: 100%; */
-    /* max-width: 500px; */
     margin: 0 auto;
     background: #fff;
     border-radius: 8px;
@@ -302,14 +316,6 @@ textarea
 }
 
 
-
-
-
-
-
-
-
-
  .btn {
       display: inline-block;
       width: 100%;
@@ -326,3 +332,106 @@ textarea
     .btn:hover {
       background: #1e5ac2;
     }
+
+.contact-information 
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.contact-info h2 {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+.contact-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.contact-list li {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  color: #334e68;
+  font-size: 1rem;
+}
+
+.contact-list .icon {
+  font-size: 1.2rem;
+}
+.contact-list a
+{
+    text-decoration: none;
+    color:black;
+}
+
+.social-links {
+  display: flex;
+  gap: 1rem;
+}
+
+.social-links a {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 2.5rem;
+  height: 2.5rem;
+  background-color: #2463eb;
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 50%;
+  transition: background-color 0.2s;
+}
+
+.social-links a:hover {
+  background-color: #1e5ac2;
+}
+.rigths-bar
+{
+    background-color: rgb(30 41 59);
+    height: 100px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:70px;
+}
+.rigths-bar > div
+{
+    color: white;
+}
+@media (min-width: 600px) 
+{
+    .opening > .col1, .opening > .col2,  div > .skills
+    {
+        flex: 1 1 50%;
+    }
+    div > .about-me
+    {
+        flex: 7 1 30%;
+    }
+    div > .skills
+    {
+        flex: 1 1 30%;
+    }
+    .projects > .project
+    {
+        flex: 1 1 10%;
+    }
+     div > .skills, div > .about-me
+     {
+        align-items: flex-start;
+     }
+     .form-container, .contact-information
+     {
+        flex: 1 1 50%;
+     }
+
+}
